cleared bugs and working fine
