# docs/swagger.json
@@ -392,7 +392,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin Offer AManagement"
+                    "Admin Offer Management"
                 ],
                 "summary": "Add offer to a category",
                 "parameters": [
@@ -516,7 +516,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Coupons"
+                    "Admin Coupon Management"
                 ],
                 "summary": "Disable a coupon",
                 "parameters": [
@@ -562,7 +562,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Coupons"
+                    "Admin Coupon Management"
                 ],
                 "summary": "Enable a coupon",
                 "parameters": [
@@ -572,7 +572,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Coupon"
+                            "$ref": "#/definitions/models.CouponStatus"
                         }
                     }
                 ],
@@ -855,7 +855,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin Offer management"
+                    "Admin Offer Management"
                 ],
                 "summary": "Add offer to a product",
                 "parameters": [
@@ -1836,17 +1836,6 @@
                     "User Login/Signup"
                 ],
                 "summary": "User Logout",
-                "parameters": [
-                    {
-                        "description": "signup",
-                        "name": "Logout",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.UserLoginDetails"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "message\":\"user logged out successfully",
@@ -2634,6 +2623,55 @@
                 }
             }
         },
+        "/removecoupon": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Removes a coupon associated with the provided authorization token.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Remove Coupon",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization header with bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "message\": \"coupon removed successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "error\": \"error in token .relogin again.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "error\": \"Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/signup": {
             "post": {
                 "description": "user can signup by giving their details",
@@ -2991,9 +3029,6 @@
             "properties": {
                 "address_id": {
                     "type": "integer"
-                },
-                "coupon": {
-                    "type": "string"
                 },
                 "payment_id": {
                     "type": "integer"
